Single ship contract waypoint management

--- a/src/SHARED/mark.davison.spacetraders.shared.models/mark.davison.spacetraders.shared.models.csproj
+++ b/src/SHARED/mark.davison.spacetraders.shared.models/mark.davison.spacetraders.shared.models.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\mark.davison.spacetraders.core\mark.davison.spacetraders.core.csproj" />
     <ProjectReference Include="..\mark.davison.spacetraders.shared.models.dtos\mark.davison.spacetraders.shared.models.dtos.csproj" />
   </ItemGroup>
 
