--- a/src/WEB/mark.davison.spacetraders.web.features/mark.davison.spacetraders.web.features.csproj
+++ b/src/WEB/mark.davison.spacetraders.web.features/mark.davison.spacetraders.web.features.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Fluxor" Version="6.0.0" />
-	<PackageReference Include="markdavison.common.client.abstractions" Version="8.4.14" />
+	<PackageReference Include="markdavison.common.client.web.abstractions" Version="8.5.6" />
   </ItemGroup>
 
   <ItemGroup>
