--- a/src/SHARED/mark.davison.spacetraders.shared.client/mark.davison.spacetraders.shared.client.csproj
+++ b/src/SHARED/mark.davison.spacetraders.shared.client/mark.davison.spacetraders.shared.client.csproj
@@ -4,4 +4,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\mark.davison.spacetraders.shared.models.dtos\mark.davison.spacetraders.shared.models.dtos.csproj" />
+  </ItemGroup>
 </Project>
