--- a/src/DESKTOP/mark.davison.spacetraders.desktop.ui/mark.davison.spacetraders.desktop.ui.csproj
+++ b/src/DESKTOP/mark.davison.spacetraders.desktop.ui/mark.davison.spacetraders.desktop.ui.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.11" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.11" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.10.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0" />
   </ItemGroup>
