--- a/src/DESKTOP/mark.davison.spacetraders.desktop.ui/mark.davison.spacetraders.desktop.ui.csproj
+++ b/src/DESKTOP/mark.davison.spacetraders.desktop.ui/mark.davison.spacetraders.desktop.ui.csproj
@@ -34,4 +34,8 @@
   <ItemGroup>
     <Folder Include="Enums\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\ManageContractPageView.axaml" />
+  </ItemGroup>
 </Project>
